k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nyc-r3s1
  labels:
    app.kubernetes.io/part-of: nycr3s1
