k8s/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ingress
  namespace: nyc-r3s1
  annotations:
    cloud.google.com/backend-config: '{"ports":{"http":"backend-ingress-config"}}'
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: nycr3s1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
