k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-public
  namespace: nyc-r3s1
  annotations:
    networking.gke.io/load-balancer-ip-addresses: nycr3s1-gke-backend-ip
    networking.gke.io/weighted-load-balancing: pods-per-node
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: nycr3s1
spec:
  type: LoadBalancer
  loadBalancerClass: networking.gke.io/l4-regional-external
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 80
      targetPort: http
